# ----------------------------------------------------------------------- #
# -------------------------- Set CMake Version -------------------------- #
# ----------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# ----------------------------------------------------------------------- #
# -------------------------- Generate headers --------------------------- #
# ----------------------------------------------------------------------- #
set(include_root ${EGNITE_SOURCE_DIR}/modules/include/egnite)
configure_file(${include_root}/config.h.in ${include_root}/config.h)
# ----------------------------------------------------------------------- #
# -------------------------- Add subdirectories ------------------------- #
# ----------------------------------------------------------------------- #
add_subdirectory(core)
add_subdirectory(serializer)
add_subdirectory(cmd)
add_subdirectory(rest)
add_subdirectory(qml)
# ----------------------------------------------------------------------- #
# ---------------------------- Export Modules --------------------------- #
# ----------------------------------------------------------------------- #
egnite_export_modules()
# ----------------------------------------------------------------------- #
