# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set files variable ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
set(source_root ${EGNITE_SOURCE_DIR}/src/egnite/egnite)
set(include_root ${EGNITE_SOURCE_DIR}/include/egnite/egnite)
set(resources_root ${EGNITE_SOURCE_DIR}/resources/egnite)

set(sources
        ${source_root}/quick_egnite.cpp
        ${source_root}/quick_plugin.cpp

        ${source_root}/web/web_client.cpp)

set(includes
        ${include_root}/export.h
        ${include_root}/quick_egnite.h
        ${include_root}/quick_plugin.h

        ${include_root}/web/web_client.h)

set(resources
        ${resources_root}/egnite.qrc)
# -------------------------------------------------------------------------------------------------- #
# ---------------------------------- Qt libraries configuration ------------------------------------ #
# -------------------------------------------------------------------------------------------------- #
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
# -------------------------------------------------------------------------------------------------- #
# ----------------------------------- Find external libraries -------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
find_package(Qt6 REQUIRED COMPONENTS Widgets Qml)
# -------------------------------------------------------------------------------------------------- #
# ------------------------------------ Create utils shared lib ------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
egnite_add_module(egnite
        SOURCES ${sources} ${includes} ${resources}
        DEPENDS_PRIVATE
        Qt6::Widgets
        Qt6::Qml
        Boost.DI)
# -------------------------------------------------------------------------------------------------- #
