# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set files variable ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
set(source_root ${EGNITE_SOURCE_DIR}/src/egnite/sniffer)
set(include_root ${EGNITE_SOURCE_DIR}/include/egnite/sniffer)
set(uis_root ${EGNITE_SOURCE_DIR}/uis/egnite/sniffer)
set(resources_root ${EGNITE_SOURCE_DIR}/resources/sniffer)

set(sources
        ${source_root}/main.cpp)

set(includes)

set(uis)

set(resources
        ${resources_root}/sniffer.qrc)
# -------------------------------------------------------------------------------------------------- #
# ---------------------------------- Qt libraries configuration ------------------------------------ #
# -------------------------------------------------------------------------------------------------- #
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_AUTOUIC_SEARCH_PATHS ${uis_root})
# -------------------------------------------------------------------------------------------------- #
# ----------------------------------- Find external libraries -------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
find_package(Qt6 REQUIRED COMPONENTS Widgets Qml)
# -------------------------------------------------------------------------------------------------- #
# ------------------------------------ create engine editor ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
egnite_add_application(sniffer
        SOURCES ${sources} ${includes} ${uis} ${resources}
        DEPENDS
        Qt::Widgets
        Qt::Qml
        egnite::egnite)
# -------------------------------------------------------------------------------------------------- #
