# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Add subdirectories ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
add_subdirectory(command_line)
add_subdirectory(json_archive)
add_subdirectory(qt_boost_serializer)
# -------------------------------------------------------------------------------------------------- #
