# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Add subdirectories ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
add_subdirectory(cmd)
add_subdirectory(boost_archive)
add_subdirectory(boost_serializer)
# -------------------------------------------------------------------------------------------------- #
