# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set CMake Version ----------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# -------------------------------------------------------------------------------------------------- #
# -------------------------------------- Set files variable ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
set(source_root ${EGNITE_SOURCE_DIR}/src/egnite/viewer)
set(include_root ${EGNITE_SOURCE_DIR}/include/egnite/viewer)
set(uis_root ${EGNITE_SOURCE_DIR}/uis/egnite/viewer)
set(resources_root ${EGNITE_SOURCE_DIR}/resources/viewer)

set(sources
        ${source_root}/main.cpp)

set(includes)

set(uis)

set(resources
        ${resources_root}/viewer.qrc)
# -------------------------------------------------------------------------------------------------- #
# ---------------------------------- Qt libraries configuration ------------------------------------ #
# -------------------------------------------------------------------------------------------------- #
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_AUTOUIC_SEARCH_PATHS ${uis_root})
# -------------------------------------------------------------------------------------------------- #
# ----------------------------------- Find external libraries -------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
find_package(Qt6 REQUIRED COMPONENTS Widgets Qml QuickControls2)
# -------------------------------------------------------------------------------------------------- #
# ------------------------------------ create engine editor ---------------------------------------- #
# -------------------------------------------------------------------------------------------------- #
egnite_add_application(viewer
        SOURCES ${sources} ${includes} ${uis} ${resources}
        DEPENDS
        Qt::Widgets
        Qt::Qml
        Qt::QuickControls2
        utils::cmd
        egnite::egnite)
# -------------------------------------------------------------------------------------------------- #
